--- a/index.html
+++ b/index.html
@@ -1,196 +1,207 @@
 ﻿<!DOCTYPE html>
-<html >
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>陈丽个人网站</title>
-  <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-  
-  <link rel='stylesheet prefetch' href='./css/animate.min.css'>
-<link rel='stylesheet prefetch' href='./css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Raleway'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
+    <meta charset="UTF-8">
+    <title>彭小梅个人网站</title>
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel='stylesheet prefetch' href='./css/animate.min.css'>
+    <link rel='stylesheet prefetch' href='./css/bootstrap.min.css'>
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Raleway'>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="display: none;">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#buttons-collapse" aria-expanded="false">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand nav-link" href="#header">陈丽</a>
+<nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="display: none;">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#buttons-collapse"
+                    aria-expanded="false">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand nav-link" href="#header">彭小梅</a>
+        </div>
+        <div class="collapse navbar-collapse" id="buttons-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a class="nav-link" href="#about">关于我</a></li>
+                <li><a class="nav-link" href="#projects">项目</a></li>
+                <li><a class="nav-link" href="#contacts">联系我</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse" id="buttons-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="nav-link" href="#about">关于我</a></li>
-        <li><a class="nav-link" href="#projects">项目</a></li>
-        <li><a class="nav-link" href="#contacts">联系我</a></li>
-      </ul>
-    </div>
-  </div>
 </nav>
 <header id="header">
-  <div id="particles"></div>
-  <div class="vert-text">
-    <h1>陈&nbsp&nbsp丽</h1>
-    <h3>前端开发工程师</h3>
-    <a href="#about" class="scroll-down nav-link"></a>
-  </div>
+    <div id="particles"></div>
+    <div class="vert-text">
+        <h1>彭小梅</h1>
+        <h3>前端开发工程师</h3>
+        <a href="#about" class="scroll-down nav-link"></a>
+    </div>
 </header>
 
 <section id="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <h2 class="major">关于我</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2 col-md-offset-3 text-center">
-        <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <i class="service-icon fa fa-user"></i>
-          <h4>关于我</h4>     
-          <p style="text-align:justify;
-     text-align-last:justify;">1.学历:重庆工程学院 本科</p>
-          <p style="text-align:justify;
-     text-align-last:justify;">2.大学期担任班委 擅长组织</p>
-          <p style="text-align:justify;
-     text-align-last:justify;">3.第一家公司，年终曾获最佳技术创新奖</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <h2 class="major">关于我</h2>
+            </div>
         </div>
-      </div>
-      <div class="col-md-2  text-center">
-        <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <i class="service-icon fa fa-code"></i>
-          <h4>关于编程</h4>
-          <p style="text-align:justify;
+        <div class="row">
+            <div class="col-md-2 col-md-offset-3 text-center">
+                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <i class="service-icon fa fa-user"></i>
+                    <h4>关于我</h4>
+                    <p style="text-align:justify; text-align-last:justify;">1.学历:重庆工程学院 本科</p>
+                    <p style="text-align:justify; text-align-last:justify;">2.大学期担任班委 擅长组织</p>
+                    <p style="text-align:justify; text-align-last:justify;">3.第一家公司，年终曾获最佳技术创新奖</p>
+                </div>
+            </div>
+            <div class="col-md-2  text-center">
+                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <i class="service-icon fa fa-code"></i>
+                    <h4>关于编程</h4>
+                    <p style="text-align:justify;
      text-align-last:justify;">1. 精通<b>vue.js</b> <b>ajax</b> <b>JS</b></p>
-          <p style="text-align:justify;
+                    <p style="text-align:justify;
      text-align-last:justify;">2. 精通<b>html5/css3</b> <b>SASS</b> <b>Jquery</b></p>
-          <p style="text-align:justify;
+                    <p style="text-align:justify;
      text-align-last:justify;">4. 精通<b>webpack</b>,熟悉<b>ES6</b>,对<b>ES6</b>和网页性能方面有深入研究实践</p>
-          <p style="text-align:justify;
+                    <p style="text-align:justify;
      text-align-last:justify;">5. 熟悉后端语言<b>nodejs</b></p>
-        </div>
-      </div>
-      <div class="col-md-2  text-center">
-        <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <i class="service-icon fa fa-rocket"></i>
-          <h4>如何学习？</h4>
-          <p style="text-align:justify;
+                </div>
+            </div>
+            <div class="col-md-2  text-center">
+                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <i class="service-icon fa fa-rocket"></i>
+                    <h4>如何学习？</h4>
+                    <p style="text-align:justify;
      text-align-last:justify;">1.看官网的技术文档，画脉络图、脑图，写demo实践</p>
-          <p style="text-align:justify;
+                    <p style="text-align:justify;
      text-align-last:justify;">2.碰到问题，先看官方文档，再去技术论坛搜寻或提问（StackOverflow，segmentfault等）,团队同事间交流及时解决问题</p>
+                </div>
+            </div>
+            <!-- <div class="col-md-2  text-center">
+              <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
+                <i class="service-icon fa fa-bug"></i>
+                <h4>Security</h4>
+                <p>I love any kind of computer security starting from writing code and optimizing it to penetration test security :D</p>
+              </div>
+            </div> -->
         </div>
-      </div>
-      <!-- <div class="col-md-2  text-center">
-        <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <i class="service-icon fa fa-bug"></i>
-          <h4>Security</h4>
-          <p>I love any kind of computer security starting from writing code and optimizing it to penetration test security :D</p>
-        </div>
-      </div> -->
     </div>
-  </div>
 </section>
 <section id="projects">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <h2 class="major">我的项目</h2>
-      </div>
-    </div>
-    <div class="row">
-       <div class="col-md-4  col-md-offset-2 text-center">
-        <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <img src="image/shu.png" class="icon">
-          <h4><a href="demo/UserCenter/index.html">图书馆信息检索分享</a></h4>
-          <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <h2 class="major">我的项目</h2>
+            </div>
         </div>
-      </div>
-      <div class="col-md-4 text-center">
-        <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <img src="image/2048.png" class="icon">
-          <h4><a href="./demo/2048-master/index.html">2048小游戏</a></h4>
-          <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
-        </div>
-      </div>
-      
-    </div>
-    <div class="row">
+        <div class="row">
+            <div class="col-md-4  col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/shu.png" class="icon">
+                    <h4><a href="demo/UserCenter/index.html">图书馆信息检索分享</a></h4>
+                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/2048.png" class="icon">
+                    <h4><a href="./demo/2048-master/index.html">2048小游戏</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
 
-      <div class="col-md-4 col-md-offset-2 text-center">
-        <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <img src="image/xiaole.png" class="icon">
-          <h4><a href="./demo/xiaoxiaole/index.html">消消乐</a></h4>
-          <p>消消乐快乐玩，js原生实现基本逻辑功能,pc端观看</p>
         </div>
-      </div>
-      
-      <div class="col-md-4  text-center">
-        <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <img src="image/chess.png" class="icon">
-          <h4><a href="./demo/chess-master/index.html">五子棋</a></h4>
-          <p>五子棋，简单的AI小游戏，算法的碰撞，赶快来回忆童年的乐趣吧！！！</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <h2 class="major">DEMO</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 col-md-offset-2 text-center">
-        <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <img src="image/msk.png" class="icon">
-          <h4><a href="./demo/masaike-master/index.html">马赛克小应用</a></h4>
-          <p>线上简单打码，可以自定义打码的像素，操作方便。</p>
-        </div>
-      </div>
+        <div class="row">
 
-      <div class="col-md-4  text-center">
-        <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-          <img src="image/vr.png " class="icon">
-          <h4><a href="./demo/vr/index2.html">仿购物节vr效果</a></h4>
-          <p>简单的模拟了vr效果，需要在移动设备观看效果，来感受一下重力感应吧！</p>
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/xiaole.png" class="icon">
+                    <h4><a href="./demo/xiaoxiaole/index.html">消消乐</a></h4>
+                    <p>消消乐快乐玩，js原生实现基本逻辑功能,pc端观看</p>
+                </div>
+            </div>
+
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/chess.png" class="icon">
+                    <h4><a href="./demo/chess-master/index.html">五子棋</a></h4>
+                    <p>五子棋，简单的AI小游戏，算法的碰撞，赶快来回忆童年的乐趣吧！！！</p>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <h2 class="major">DEMO</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/msk.png" class="icon">
+                    <h4><a href="./demo/masaike-master/index.html">马赛克小应用</a></h4>
+                    <p>线上简单打码，可以自定义打码的像素，操作方便。</p>
+                </div>
+            </div>
 
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/vr.png " class="icon">
+                    <h4><a href="./demo/vr/index2.html">仿购物节vr效果</a></h4>
+                    <p>简单的模拟了vr效果，需要在移动设备观看效果，来感受一下重力感应吧！</p>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- <div class="row">
+          <div class="col-md-4 col-md-offset-4 text-center">
+            <h4>我的<a href="https://github.com/qijianwei">github page</a></h4>
+          </div>
+        </div> -->
     </div>
-
-    <!-- <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <h4>我的<a href="https://github.com/qijianwei">github page</a></h4>
-      </div>
-    </div> -->
-  </div>
 </section>
 
 <footer id="contacts">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
-        <h3>You can contact me on</h3>
-        <ul class="list-inline social">
-          <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s" style="animation-delay: 0s;"><a href="https://github.com/xiaozhima520mayi?tab=repositories"><i class="fa fa-github fa-2x"></i></a></li>
-         <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s" style="animation-delay: 0s;"><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=4tPQ1tfR1dHT1dqik5PMgY2P" style="text-decoration:none;"><i class="fa fa-qq fa-2x"></i></a></li>
-         <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s" style="animation-delay: 0s;"><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=4tPQ1tfR1dHT1dqik5PMgY2P" style="text-decoration:none;"><i class="fa fa-weixin fa-2x"></i></a></li>
-        </ul>
-        <p>Copyright © chenli 2016</p>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center">
+                <h3>You can contact me on</h3>
+                <ul class="list-inline social">
+                    <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
+                        style="animation-delay: 0s;"><a href="https://github.com/xiaozhima520mayi?tab=repositories"><i
+                            class="fa fa-github fa-2x"></i></a></li>
+                    <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
+                        style="animation-delay: 0s;"><a target="_blank"
+                                                        href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=4tPQ1tfR1dHT1dqik5PMgY2P"
+                                                        style="text-decoration:none;"><i class="fa fa-qq fa-2x"></i></a>
+                    </li>
+                    <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
+                        style="animation-delay: 0s;"><a target="_blank"
+                                                        href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=4tPQ1tfR1dHT1dqik5PMgY2P"
+                                                        style="text-decoration:none;"><i class="fa fa-weixin fa-2x"></i></a>
+                    </li>
+                </ul>
+                <p>Copyright © chenli 2016</p>
+            </div>
+        </div>
     </div>
-  </div>
 </footer>
-  <script src='js/jquery.min.js'></script>
+<script src='js/jquery.min.js'></script>
 <script src='js/bootstrap.min.js'></script>
 <script src='js/particles.min.js'></script>
-
-    <script src="js/index.js"></script>
-
+<script src="js/index.js"></script>
 </body>
 </html>
