--- a/index.html
+++ b/index.html
@@ -106,6 +106,42 @@
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s;">
                     <img src="image/shu.png" class="icon">
+                    <h4><a href="demo/FoodApp/index.html">美食APP</a></h4>
+                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/2048.png" class="icon">
+                    <h4><a href="./demo/EducpHtml/index.html">V校园</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4  col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/shu.png" class="icon">
+                    <h4><a href="demo/SXChildStar/index.html">绍兴少儿图书馆-星球版</a></h4>
+                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/2048.png" class="icon">
+                    <h4><a href="demo/SXChildDesk/index.html">绍兴少儿图书馆-桌面版</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4  col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/shu.png" class="icon">
                     <h4><a href="demo/UserCenter/index.html">图书馆信息检索分享</a></h4>
                     <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
                 </div>
@@ -118,10 +154,8 @@
                     <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
                 </div>
             </div>
-
         </div>
         <div class="row">
-
             <div class="col-md-4 col-md-offset-2 text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s;">
@@ -138,11 +172,6 @@
                     <h4><a href="./demo/chess-master/index.html">五子棋</a></h4>
                     <p>五子棋，简单的AI小游戏，算法的碰撞，赶快来回忆童年的乐趣吧！！！</p>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4 text-center">
-                <h2 class="major">DEMO</h2>
             </div>
         </div>
         <div class="row">
@@ -171,6 +200,31 @@
             <h4>我的<a href="https://github.com/qijianwei">github page</a></h4>
           </div>
         </div> -->
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <h2 class="major">我的UI设计作品</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/xiaole.png" class="icon">
+                    <h4><a href="http://huaban.com/boards/19959863/" target="_blank">企业网站,APP页面</a></h4>
+                </div>
+            </div>
+
+            <div class="col-md-4  text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;">
+                    <img src="image/chess.png" class="icon">
+                    <h4><a href="https://huaban.com/boards/28486678/" target="_blank">课程专题,移动端设计</a></h4>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
