--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand nav-link" href="#header">彭小梅</a>
+            <a class="navbar-brand nav-link" href="#header">彭小梅个人主页</a>
         </div>
         <div class="collapse navbar-collapse" id="buttons-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="nav-link" href="#about">关于我</a></li>
-                <li><a class="nav-link" href="#projects">项目</a></li>
+                <li><a class="nav-link" href="#projects">我的项目</a></li>
                 <li><a class="nav-link" href="#contacts">联系我</a></li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
     <div id="particles"></div>
     <div class="vert-text">
         <h1>彭小梅</h1>
-        <h3>前端开发工程师</h3>
+        <h3>web前端开发工程师</h3>
         <a href="#about" class="scroll-down nav-link"></a>
     </div>
 </header>
@@ -53,44 +53,9 @@
                      data-os-animation-delay="0s" style="animation-delay: 0s;">
                     <i class="service-icon fa fa-user"></i>
                     <h4>关于我</h4>
-                    <p style="text-align:justify; text-align-last:justify;">1.学历:重庆工程学院 本科</p>
-                    <p style="text-align:justify; text-align-last:justify;">2.大学期担任班委 擅长组织</p>
-                    <p style="text-align:justify; text-align-last:justify;">3.第一家公司，年终曾获最佳技术创新奖</p>
+                    <p>web前端开发工程师兼高级UI设计师，曾带过十人左右的设计部和前端开发团队，主要负责管理项目进度， 控制团队整体的效率、代码产出水平和规范，优化页面整体效果，制作标准化代码，多界面平台的兼容性，提高用户体验，丰富前端交互体验。熟悉ES6、Nodejs、Express、Webpack、Npm、Grunt、Gulp、Canvas、Bootstrap、Less、Ionic、Ajax、EasyUI、Git等，精通Html5+Css3布局，能熟练使用javascript、jQuery等脚本语言， 实现设计要求的动态效果，对网页的视觉呈现和用户体验有独到的理解，有多个Vue,Angular开发经验。</p>
                 </div>
             </div>
-            <div class="col-md-2  text-center">
-                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s;">
-                    <i class="service-icon fa fa-code"></i>
-                    <h4>关于编程</h4>
-                    <p style="text-align:justify;
-     text-align-last:justify;">1. 精通<b>vue.js</b> <b>ajax</b> <b>JS</b></p>
-                    <p style="text-align:justify;
-     text-align-last:justify;">2. 精通<b>html5/css3</b> <b>SASS</b> <b>Jquery</b></p>
-                    <p style="text-align:justify;
-     text-align-last:justify;">4. 精通<b>webpack</b>,熟悉<b>ES6</b>,对<b>ES6</b>和网页性能方面有深入研究实践</p>
-                    <p style="text-align:justify;
-     text-align-last:justify;">5. 熟悉后端语言<b>nodejs</b></p>
-                </div>
-            </div>
-            <div class="col-md-2  text-center">
-                <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s;">
-                    <i class="service-icon fa fa-rocket"></i>
-                    <h4>如何学习？</h4>
-                    <p style="text-align:justify;
-     text-align-last:justify;">1.看官网的技术文档，画脉络图、脑图，写demo实践</p>
-                    <p style="text-align:justify;
-     text-align-last:justify;">2.碰到问题，先看官方文档，再去技术论坛搜寻或提问（StackOverflow，segmentfault等）,团队同事间交流及时解决问题</p>
-                </div>
-            </div>
-            <!-- <div class="col-md-2  text-center">
-              <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay="0s" style="animation-delay: 0s;">
-                <i class="service-icon fa fa-bug"></i>
-                <h4>Security</h4>
-                <p>I love any kind of computer security starting from writing code and optimizing it to penetration test security :D</p>
-              </div>
-            </div> -->
         </div>
     </div>
 </section>
