--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/SXChildDesk.jpg" class="icon" style="height:250px;">
-                    <h4><a href="SXChildDesk/index.html">绍兴少儿图书馆-桌面版</a></h4>
+                    <h4><a href="https://pxm928.github.io/SXChildDesk/Index.html">绍兴少儿图书馆-桌面版</a></h4>
                     <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
                 </div>
             </div>
