--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             <div class="col-md-4 text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s;width: 90%; margin-top: 20px;">
-                    <img src="image/2048.png" class="icon" style="height:250px;">
-                    <h4><a href="EducpHtml/index.html">V校园</a></h4>
-                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                    <img src="image/vSchool.png" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/EducpHtml/login">V校园</a></h4>
+                    <p>V校园,一款专业移动儿童管理软件，为幼儿园提供考勤、流程审核、活动管理等等。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。</p>
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/SXChildStar.jpg" class="icon" style="height:250px;">
-                    <h4><a href="SXChildStar/index.html">绍兴少儿图书馆-星球版</a></h4>
+                    <h4><a href="https://pxm928.github.io/SXChildStar/Index.html">绍兴少儿图书馆-星球版</a></h4>
                     <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
                 </div>
             </div>
