--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/app.jpg" class="icon" style="height:250px;">
-                    <h4><a href="FoodApp/index.html">美食APP</a></h4>
+                    <h4><a href="https://pxm928.github.io/#/tabs/home">美食APP</a></h4>
                     <p class="text-left">包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
                 </div>
             </div>
