--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/app.jpg" class="icon" style="height:250px;">
-                    <h4><a href="https://pxm928.github.io/#/tabs/home">美食APP</a></h4>
+                    <h4><a href="https://pxm928.github.io/#/tabs/home" target="_blank">美食APP</a></h4>
                     <p class="text-left">包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-4  text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s;width: 90%; margin-top: 20px;">
-                    <img src="image/vSchool.png" class="icon" style="height:250px;">
-                    <h4><a href="https://pxm928.github.io/EducpHtml/login">V校园</a></h4>
-                    <p>V校园,一款专业移动儿童管理软件，为幼儿园提供考勤、流程审核、活动管理等等。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。</p>
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/vr.jpg" class="icon" style="height:250px;">
+                    <h4><a href="./demo/vr/index2.html" target="_blank">仿购物节vr效果</a></h4>
+                    <p>简单的模拟了vr效果，需要在移动设备观看效果，来感受一下重力感应吧！<br><br></p>
                 </div>
             </div>
         </div>
@@ -117,17 +117,17 @@
             <div class="col-md-4 col-md-offset-2 text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/SXChildStar.jpg" class="icon" style="height:250px;">
-                    <h4><a href="https://pxm928.github.io/SXChildStar/Index.html">绍兴少儿图书馆-星球版</a></h4>
-                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
+                    <img src="image/SXChildDesk.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/SXChildDesk/Index.html" target="_blank">绍兴少儿图书馆-桌面版</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/SXChildDesk.jpg" class="icon" style="height:250px;">
-                    <h4><a href="https://pxm928.github.io/SXChildDesk/Index.html">绍兴少儿图书馆-桌面版</a></h4>
-                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                    <img src="image/SXChildStar.jpg" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/SXChildStar/Index.html" target="_blank">绍兴少儿图书馆-星球版</a></h4>
+                    <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
                 </div>
             </div>
         </div>
@@ -136,54 +136,34 @@
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/shu.png" class="icon" style="height:250px;">
-                    <h4><a href="demo/UserCenter/index.html">图书馆信息检索分享</a></h4>
+                    <h4><a href="demo/UserCenter/index.html" target="_blank">图书馆信息检索分享</a></h4>
                     <p>包含搜索页面模块，平台首页展示模块，个人用户登录模块，收藏页面模块，评论页面模块，用户关注页面模块</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s;width: 90%; margin-top: 20px;">
+                    <img src="image/vSchool.png" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/EducpHtml/login" target="_blank">V校园</a></h4>
+                    <p>V校园,一款专业移动儿童管理软件，为幼儿园提供考勤、流程审核、活动管理等等。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/2048.png" class="icon" style="height:250px;">
-                    <h4><a href="./demo/2048-master/index.html">2048小游戏</a></h4>
+                    <h4><a href="./demo/2048-master/index.html" target="_blank">2048小游戏</a></h4>
                     <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-2 text-center">
+            <div class="col-md-4 text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
                     <img src="image/xiaole.png" class="icon" style="height:250px;">
-                    <h4><a href="./demo/xiaoxiaole/index.html">消消乐</a></h4>
-                    <p>消消乐快乐玩，js原生实现基本逻辑功能,pc端观看</p>
-                </div>
-            </div>
-
-            <div class="col-md-4  text-center">
-                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/chess.png" class="icon" style="height:250px;">
-                    <h4><a href="./demo/chess-master/index.html">五子棋</a></h4>
-                    <p>五子棋，简单的AI小游戏，算法的碰撞，赶快来回忆童年的乐趣吧！！！</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-2 text-center">
-                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/msk.png" class="icon" style="height:250px;">
-                    <h4><a href="./demo/masaike-master/index.html">马赛克小应用</a></h4>
-                    <p>线上简单打码，可以自定义打码的像素，操作方便。</p>
-                </div>
-            </div>
-
-            <div class="col-md-4  text-center">
-                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/vr.png " class="icon" style="height:250px;">
-                    <h4><a href="./demo/vr/index2.html">仿购物节vr效果</a></h4>
-                    <p>简单的模拟了vr效果，需要在移动设备观看效果，来感受一下重力感应吧！</p>
+                    <h4><a href="./demo/xiaoxiaole/index.html" target="_blank">消消乐</a></h4>
+                    <p>消消乐快乐玩，<br>js原生实现基本逻辑功能,pc端观看<br><br></p>
                 </div>
             </div>
         </div>
@@ -202,7 +182,6 @@
                     <h4><a href="http://huaban.com/boards/19959863/" target="_blank">企业网站,APP页面</a></h4>
                 </div>
             </div>
-
             <div class="col-md-4  text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
@@ -219,7 +198,6 @@
                     <h4><a href="https://huaban.com/pins/641624854/" target="_blank">企业网站,APP页面</a></h4>
                 </div>
             </div>
-
             <div class="col-md-4  text-center">
                 <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
