--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <div class="col-md-6 col-md-offset-3 text-center" style="padding: 10px 0 20px">
                 <div class="service-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
                      data-os-animation-delay="0s" style="animation-delay: 0s;">
-                    <p class="text-left" style="font-size: 16px;line-height: 30px; margin-right: 15px">web前端开发工程师兼高级UI设计师，曾带过十人左右的设计部和前端开发团队，主要负责管理项目进度， 控制团队整体的效率、代码产出水平和规范，优化页面整体效果，制作标准化代码，多界面平台的兼容性，提高用户体验，丰富前端交互体验。熟悉ES6、Nodejs、Express、Webpack、Npm、Grunt、Gulp、Canvas、Bootstrap、Less、Ionic、Ajax、EasyUI、Git等，精通Html5+Css3布局，能熟练使用javascript、jQuery等脚本语言， 实现设计要求的动态效果，对网页的视觉呈现和用户体验有独到的理解，有多个Vue,Angular开发经验。</p>
+                    <p class="text-left" style="font-size: 16px;line-height: 30px; margin-right: 15px">web前端开发工程师兼高级UI设计师，曾带过十人左右的设计部和前端开发团队，主要负责管理项目进度， 控制团队整体的效率、代码产出水平和规范，优化页面整体效果，制作标准化代码，多界面平台的兼容性，提高用户体验，丰富前端交互体验。</p>
+                    <p class="text-left" style="font-size: 16px;line-height: 30px; margin-right: 15px">熟悉ES6、Nodejs、Express、Webpack、Npm、Grunt、Gulp、Canvas、Bootstrap、Less、Ionic、Ajax、EasyUI、Git等，精通Html5+Css3布局，能熟练使用javascript、jQuery等脚本语言， 实现设计要求的动态效果，对网页的视觉呈现和用户体验有独到的理解，有多个Vue、Angular开发经验。</p>
                 </div>
             </div>
         </div>
@@ -94,6 +95,32 @@
             <div class="col-md-4 col-md-offset-4 text-center">
                 <h2 class="major">我的项目</h2>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/wchat.png" class="icon" style="height:250px;">
+                    <h4><a href="https://pxm928.github.io/WeChatGame/index.html" target="_blank">微信H5游戏&打怪游戏</a></h4>
+                    <p>微信H5游戏 , 技术栈：1.HTML5 , 2.CSS3 , 3.JAVASCRIPT , 4.JQUERY , 5.canvas 用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/2048.png" class="icon" style="height:250px;">
+                    <h4><a href="./demo/2048-master/index.html" target="_blank">2048小游戏</a></h4>
+                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
+                </div>
+            </div>
+            <!--<div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/xiaole.png" class="icon" style="height:250px;">
+                    <h4><a href="./demo/xiaoxiaole/index.html" target="_blank">消消乐</a></h4>
+                    <p>消消乐快乐玩，<br>js原生实现基本逻辑功能,pc端观看<br><br></p>
+                </div>
+            </div>-->
         </div>
         <div class="row">
             <div class="col-md-4 col-md-offset-2 text-center">
@@ -146,24 +173,6 @@
                     <img src="image/vSchool.png" class="icon" style="height:250px;">
                     <h4><a href="https://pxm928.github.io/EducpHtml/login" target="_blank">V校园</a></h4>
                     <p>V校园,一款专业移动儿童管理软件，为幼儿园提供考勤、流程审核、活动管理等等。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-2 text-center">
-                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/2048.png" class="icon" style="height:250px;">
-                    <h4><a href="./demo/2048-master/index.html" target="_blank">2048小游戏</a></h4>
-                    <p>2048小游戏，PC和移动端均适配。技术栈：1.HTML5 ,2.CSS3 , 3.JAVASCRIPT 4.JQUERY 。用了H5新标签canvas和JS完美结合。</p>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
-                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
-                    <img src="image/xiaole.png" class="icon" style="height:250px;">
-                    <h4><a href="./demo/xiaoxiaole/index.html" target="_blank">消消乐</a></h4>
-                    <p>消消乐快乐玩，<br>js原生实现基本逻辑功能,pc端观看<br><br></p>
                 </div>
             </div>
         </div>
@@ -237,12 +246,12 @@
                             class="fa fa-github fa-2x"></i></a></li>
                     <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
                         style="animation-delay: 0s;"><a target="_blank"
-                                                        href="#"
+                                                        href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=u4qLjomOjo2Kior7ysqV2NTW"
                                                         style="text-decoration:none;"><i class="fa fa-qq fa-2x"></i></a>
                     </li>
                     <li class="os-animation animated shake" data-os-animation="shake" data-os-animation-delay="0s"
                         style="animation-delay: 0s;"><a target="_blank"
-                                                        href="#"
+                                                        href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=u4qLjomOjo2Kior7ysqV2NTW"
                                                         style="text-decoration:none;"><i class="fa fa-weixin fa-2x"></i></a>
                     </li>
                 </ul>
