--- a/index.html
+++ b/index.html
@@ -176,6 +176,24 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-2 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/shouye.png" class="icon" style="height:250px;">
+                    <h4><a href="https://github.com/pxm928/APP-master" target="_blank">移动端APP</a></h4>
+                    <p>移动端商户信息、消费点评，类似大众点评</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="project-item os-animation animated fadeInUp" data-os-animation="fadeInUp"
+                     data-os-animation-delay="0s" style="animation-delay: 0s; width: 90%; margin-top: 20px;">
+                    <img src="image/shouye.png" class="icon" style="height:250px;">
+                    <h4><a href="https://github.com/pxm928/MerchantAdmin-master" target="_blank">商家管理后台</a></h4>
+                    <p>这是一个基于vue开发的商家管理后台</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="container">
         <div class="row">
